# chimera-sdk

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: lint.yml
cmake/: Utils.cmake  toolchain_gcc.cmake
hal/: CMakeLists.txt
hal/inc/: device_api.h
hal/src/: device_api.c
targets/: CMakeLists.txt
targets/cheshire/: CMakeLists.txt
targets/cheshire/src/: crt0.S
tests/: CMakeLists.txt
tests/generic/: CMakeLists.txt
tests/generic/testReturnZero/: CMakeLists.txt
tests/generic/testReturnZero/src/: testReturn0.c
